# bluehoover

./: .env  .gitignore  Dockerfile  README.md  cursor.txt  docker-compose.yml  pyproject.toml  webapp.Dockerfile
.github/workflows/: docker-publish.yml
bluehoover/: __main__.py  clickhouse.py
bluehoover/dashboard/: main.py  webapp.py
bluehoover/dashboard/nginx/: nginx.conf
bluehoover/dashboard/templates/: index.html
config/config.d/: config.yaml
config/keeper.d/: keeper_config-preprocessed.xml
docker/config.d/: config.yaml
docker/keeper.d/: keeper_config.xml  keeper_config.yaml
helm/: Chart.yaml  values.yaml
helm/charts/: clickhouse-0.1.7.tgz
helm/templates/: deployment-firehose.yaml  schema-init.yaml
