[tool.poetry]
name = "bluehoover"
version = "0.1.0"
description = ""
authors = ["Joseph Redfern <joseph@redfern.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
atproto = "^0.0.55"
clickhouse-connect = "^0.8.6"
backoff = "^2.2.1"
loguru = "^0.7.2"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
jinja2 = "^3.1.4"


[tool.poetry.group.dev.dependencies]
ipython = "^8.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
