[tool.poetry]
name = "bluehoover"
version = "0.1.0"
description = ""
authors = ["Joseph Redfern <joseph@redfern.me>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
clickhouse-connect = "^0.8.6"
backoff = "^2.2.1"
loguru = "^0.7.2"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
jinja2 = "^3.1.4"
websocket = "^0.2.1"
ujson = "^5.10.0"
websockets = "^14.1"


[tool.poetry.group.dev.dependencies]
ipython = "^8.29.0"
ruff = "^0.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
